objects/FollowUp__c.object
<CustomObject>
    <description>FollowUp of the cases</description>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>CaseNumber</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>FollowUps</relationshipLabel>
        <relationshipName>FollowUps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MediaType__c</fullName>
        <label>MediaType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>V-mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FollowUp</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FollowUps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>